--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image" title="lion king of the jungle"/>
   </body>
 </html>
